fixed spacing

--- a/frontend/src/containers/RecipePage/Recipe.css
+++ b/frontend/src/containers/RecipePage/Recipe.css
@@ -1,5 +1,5 @@
 .overall-container {
-  margin: 0px 20px;
+  margin: 0px 30px;
   padding: 0px;
 }
 
@@ -49,14 +49,15 @@
 #ingredient-box {
   display: flex;
   justify-content: center;
-  margin-top: 4%;
-  padding: 5%;
+  margin-top: 1%;
+  padding: 1% 3% 3% 3%;
+  margin-bottom: -1%;
 }
 
 #ingredient-ul {
   column-count: 2;
   column-gap: 50px;
-  padding: 6%;
+  padding: 6% 3% 3% 3%;
   width: 100%;
 
 }
@@ -64,11 +65,13 @@
 #direction-title {
   margin-top: 2%;
   text-align: center;
+  padding: 1% 3% 3% 3%;
 }
 
 #direction-container {
   margin-bottom: 20px;
   text-align: left;
+  padding: 1% 3% 3% 3%;
 }
 
 .single-direction {
